--- a/home.html
+++ b/home.html
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-      viewport-fit="cover"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
-    <!--    Bootstrap icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
 
-    <!--    Google icons inladen-->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    viewport-fit="cover" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+  <!--    Bootstrap icons inladen-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
-    <!--    Material inladen-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
-    />
+  <!--    Google icons inladen-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <!--Manifest inladen voor PWA-->
-    <link rel="manifest" href="manifest.json" />
+  <!--    Material inladen-->
+  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" />
 
-    <link rel="icon" href="images/printpal512icon.png" />
-    <title>Printpal</title>
+  <!--Manifest inladen voor PWA-->
+  <link rel="manifest" href="manifest.json" />
 
-    <script type="module" src="js/pwa.js"></script>
-    <script type="module" src="js/sendmessage.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <div class="left">
-          <img src="images/printpallogo.png" alt="logo" class="logo" />
-        </div>
+  <link rel="icon" href="images/printpal512icon.png" />
+  <title>Printpal</title>
+
+  <script type="module" src="js/pwa.js"></script>
+  <script type="module" src="js/sendmessage.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="header">
+      <div class="left">
+        <img src="images/printpallogo_grey.png" alt="logo" class="logo" />
+      </div>
+      <a href="profilepage.html">
         <div class="right">
           <div class="profileavatar"></div>
         </div>
-      </div>
+    </div>
+    </a>
+
+    <section id="introsection">
+
 
       <div class="titletext">
         <h1>Hello, <span class="bold">Test</span> 👋</h1>
@@ -71,23 +67,37 @@
         <span class="mdc-button__label">You have 2 new prints</span>
       </button>
     </div> -->
-      <button
-        class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
-        id="sendbutton"
-      >
-        <span class="mdc-button__ripple"></span>
-        <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
-        <span class="mdc-button__label">You have 2 new prints</span>
-      </button>
+      <!-- <button class="mdc-button mdc-button--raised mdc-button--leading sendbutton" id="sendbutton">
+      <span class="mdc-button__ripple"></span>
+      <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
+      <span class="mdc-button__label">You have 2 new prints</span>
+    </button> -->
 
-      <section id="historysection">
-          <div class="left">
-            <h2>History</h2>
+      <a href="newprint.html">
+        <div class="printbutton">
+          <div class="grid-item">
+            <i class="material-icons md-48 md-light">
+              article
+            </i>
           </div>
-          <div class="right">
-              <h2 class="green">See all</h2>
+          <div class="grid-item">
+            <h3>You have 2 new prints!</h3>
           </div>
-        <!-- <div class="card">
+        </div>
+      </a>
+    </section>
+
+
+    <section id="historysection">
+      <div class="left">
+        <h2>History</h2>
+      </div>
+      <a href="history.html">
+        <div class="right">
+          <h2 class="green">See all</h2>
+        </div>
+      </a>
+      <!-- <div class="card">
           <div class="cardcontainer">
             <div class="griditem">
               <img src="images/avatar.png" />
@@ -102,75 +112,71 @@
           </div>
         </div> -->
 
-        <div class="card">
-            <div class="grid-item"><img src="images/avatar.png" /></div>
-            <div class="grid-item">
-              <h3>Motivational Message</h3>
-              <p>Laura Lopez</p>
-            </div>
-            <div class="grid-item"><p>18:35</p></div>
-          </div>
-          <div class="card">
-            <div class="grid-item"><img src="images/avatar.png" /></div>
-            <div class="grid-item">
-              <h3>Motivational Message</h3>
-              <p>Laura Lopez</p>
-            </div>
-            <div class="grid-item"><p>18:35</p></div>
-          </div>
-          <div class="card">
-            <div class="grid-item"><img src="images/avatar.png" /></div>
-            <div class="grid-item">
-              <h3>Motivational Message</h3>
-              <p>Laura Lopez</p>
-            </div>
-            <div class="grid-item"><p>18:35</p></div>
-          </div>
-          <div class="card">
-            <div class="grid-item"><img src="images/avatar.png" /></div>
-            <div class="grid-item">
-              <h3>Motivational Message</h3>
-              <p>Laura Lopez</p>
-            </div>
-            <div class="grid-item"><p>18:35</p></div>
-          </div>
+      <div class="card">
+        <div class="grid-item"><img src="images/avatar.png" /></div>
+        <div class="grid-item">
+          <h3>Venting</h3>
+          <p>Laura Lopez</p>
         </div>
-      </section>
-      
-
-
-
-    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
-
-    <script>
-      const textField = new mdc.textField.MDCTextField(
-        document.querySelector(".mdc-text-field")
-      );
-      const helperText = new mdc.textField.MDCTextFieldHelperText(
-        document.querySelector(".mdc-text-field-helper-text")
-      );
-    </script>
-
-    <footer>
-      <div class="taskbar-icons">
-        <div class="home-icon">
-          <p>
-            <i class="material-icons">home</i>
-          </p>
-        </div>
-        <div class="mdc-touch-target-wrapper">
-          <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
-            <div class="mdc-fab__ripple"></div>
-            <span class="material-icons mdc-fab__icon">add</span>
-            <div class="mdc-fab__touch"></div>
-          </button>
-        </div>
-        <div class="chat-icon">
-          <p>
-            <i class="material-icons">chat</i>
-          </p>
+        <div class="grid-item">
+          <p>18:35</p>
         </div>
       </div>
-    </footer>
-  </body>
+      <div class="card">
+        <div class="grid-item"><img src="images/avatar.png" /></div>
+        <div class="grid-item">
+          <h3>Nice Message</h3>
+          <p>Laura Lopez</p>
+        </div>
+        <div class="grid-item">
+          <p>18:35</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="grid-item"><img src="images/avatar.png" /></div>
+        <div class="grid-item">
+          <h3>Motivational</h3>
+          <p>Laura Lopez</p>
+        </div>
+        <div class="grid-item">
+          <p>18:35</p>
+        </div>
+      </div>
+  </div>
+  </section>
+
+  <footer>
+    <div class="taskbar-icons">
+      <div class="home-icon">
+        <p>
+          <i class="material-icons">home</i>
+        </p>
+      </div>
+      <div class="mdc-touch-target-wrapper">
+        <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+          <div class="mdc-fab__ripple"></div>
+          <span class="material-icons  mdc-fab__icon">add</span>
+          <div class="mdc-fab__touch"></div>
+        </button>
+      </div>
+      <div class="chat-icon">
+        <p>
+          <i class="material-icons">chat</i>
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+
+  <script>
+    const textField = new mdc.textField.MDCTextField(
+      document.querySelector(".mdc-text-field")
+    );
+    const helperText = new mdc.textField.MDCTextFieldHelperText(
+      document.querySelector(".mdc-text-field-helper-text")
+    );
+  </script>
+</body>
+
 </html>
