--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <div class="mdc-line-ripple"></div>
       </div>
 
-      <div
-        class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield">
+      <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield">
         <i class="material-icons mdc-text-field__icon">lock</i>
         <input type="password" id="password" class="mdc-text-field__input" />
         <label for="password" class="mdc-floating-label">Password</label>
